--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,5 +14,5 @@ uvicorn = "^0.34.0"
 
 
 [build-system]
-requires = ["poetry-core"]
+requires = ["poetry-core>=2.1.1"]
 build-backend = "poetry.core.masonry.api"
