--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,10 @@ package-mode = false
 python = "^3.12"
 fastapi = "^0.115.8"
 uvicorn = "^0.34.0"
+alembic = "^1.15.2"
+asyncpg = "^0.30.0"
+sqlalchemy = "^2.0.40"
+pydantic-settings = "^2.8.1"
 
 
 [build-system]
