--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ alembic = "^1.15.2"
 asyncpg = "^0.30.0"
 sqlalchemy = "^2.0.40"
 pydantic-settings = "^2.8.1"
+greenlet = "^3.1.1"
 
 
 [build-system]
