--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ asyncpg = "^0.30.0"
 sqlalchemy = "^2.0.40"
 pydantic-settings = "^2.8.1"
 greenlet = "^3.1.1"
+pre-commit = "^4.2.0"
 
 
 [build-system]
