--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,3 +12,7 @@ repos:
     rev: v3.3.1
     hooks:
         - id: pyupgrade
+-   repo: https://github.com/crate-ci/typos
+    rev: v1.13.4
+    hooks:
+    -   id: typos
