--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -16,3 +16,17 @@ repos:
     rev: v1.13.4
     hooks:
     -   id: typos
+-   repo: https://github.com/psf/black
+    rev: 22.12.0
+    hooks:
+    -   id: black
+#-   repo: https://github.com/pycqa/flake8
+#    rev: 6.0.0
+#    hooks:
+#    -   id: flake8
+#        additional_dependencies:
+#            - flake8-bugbear
+#            - flake8-print
+
+default_language_version:
+    python: python3.12
