--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,8 @@ sqlalchemy = "^2.0.40"
 pydantic-settings = "^2.8.1"
 greenlet = "^3.1.1"
 pre-commit = "^4.2.0"
+black = "^25.1.0"
+ruff = "^0.11.5"
 
 
 [build-system]
