--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -24,6 +24,8 @@ repos:
     rev: v0.11.5
     hooks:
         -   id: ruff
+            args:
+            - --fix
 
 default_language_version:
     python: python3.12
