--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,8 +19,7 @@ greenlet = "^3.1.1"
 pre-commit = "^4.2.0"
 black = "^25.1.0"
 ruff = "^0.11.5"
-redis = "^6.2.0"
-fastapi-cache = "^0.1.0"
+aioredis = "^2.0.1"
 
 
 [build-system]
