--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,6 @@
+version: "3"
 services:
-  app:
+  py_send_message:
     build:
       context: .
       dockerfile: Dockerfile
@@ -7,8 +8,34 @@ services:
       - "8000:80"
     volumes:
       - .:/code
+  postgres:
+    image: postgres:latest
+    container_name: postgres_container
     environment:
-      - YOUR_ENV=development
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: 123456
+      POSTGRES_DB: py_send_message
+      PGDATA: /var/lib/postgresql/data/pgdata
+    ports:
+      - "5432:5432"
+    volumes:
+      - ./pgdata:/var/lib/postgresql/data/pgdata
+    command: >
+      postgres -c max_connections=1000
+               -c shared_buffers=256MB
+               -c effective_cache_size=768MB
+               -c maintenance_work_mem=64MB
+               -c checkpoint_completion_target=0.7
+               -c wal_buffers=16MB
+               -c default_statistics_target=100
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready -U postgres_user -d postgres_db" ]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+    restart: unless-stopped
+    tty: true
+    stdin_open: true
 
 volumes:
   pgdata:
