--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: "3"
 services:
   py_send_message:
     build:
@@ -14,36 +13,25 @@ services:
       - REDIS_PORT=6379
       - REDIS_PASSWORD=
       - REDIS_DB=0
+      - POSTGRES_HOST=postgres
+      - POSTGRES_PORT=5432
+      - POSTGRES_DB=py_send_message
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=123456
     depends_on:
       - redis
-#  postgres:
-#    image: postgres:latest
-#    container_name: postgres_container
-#    environment:
-#      POSTGRES_USER: postgres
-#      POSTGRES_PASSWORD: 123456
-#      POSTGRES_DB: py_send_message
-#      PGDATA: /var/lib/postgresql/data/pgdata
+      - postgres
+  postgres:
+    image: postgres:16-alpine
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: 123456
+      POSTGRES_DB: py_send_message
+      PGDATA: /var/lib/postgresql/data/pgdata
 #    ports:
 #      - "5440:5432"
-#    volumes:
-#      - ./pgdata:/var/lib/postgresql/data/pgdata
-#    command: >
-#      postgres -c max_connections=1000
-#               -c shared_buffers=256MB
-#               -c effective_cache_size=768MB
-#               -c maintenance_work_mem=64MB
-#               -c checkpoint_completion_target=0.7
-#               -c wal_buffers=16MB
-#               -c default_statistics_target=100
-#    healthcheck:
-#      test: [ "CMD-SHELL", "pg_isready -U postgres_user -d postgres_db" ]
-#      interval: 30s
-#      timeout: 10s
-#      retries: 5
-#    restart: unless-stopped
-#    tty: true
-#    stdin_open: true
+    volumes:
+      - ./pgdata:/var/lib/postgresql/data/pgdata
   redis:
     image: redis:7.2-alpine
     volumes:
@@ -53,3 +41,4 @@ volumes:
   pgdata:
     driver: local
   redis-data:
+    driver: local
